[gd_scene load_steps=4 format=2]

[ext_resource path="res://ShapeDict.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Newsgeek.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="ShapeDict" type="Node2D"]
script = ExtResource( 1 )

[node name="ShapeName" type="Label" parent="."]
margin_left = 0.667419
margin_top = 0.667419
margin_right = 40.6674
margin_bottom = 14.6674
custom_fonts/font = SubResource( 1 )
text = "Placeholder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShapeContainer" type="Control" parent="."]
margin_left = 1.0
margin_top = 19.0
margin_right = 201.0
margin_bottom = 219.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.6
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
